<resources>
    <string name="app_name">AndroidTask</string>

    <string name="place_name">Place name</string>
    <string name="name">Name*</string>
    <string name="street_address">\nStreet address</string>
    <string name="address">Address*</string>
    <string name="category">Category*</string>
    <string name="choose_category">Choose category</string>
    <string name="add_phone_hours_website_and_photos">Add phone, hours, website and photos</string>
    <string name="help_google_verify_this_place">Help Google verify this place</string>
    <string name="google">Google will email you about the status of your edits. Learn more</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required.</string>
    <string name="location_permission_denied">Location permission denied.</string>
    <string name="permission_required_toast">Location permission is required.</string>
    <string name="new_place">Tap on the location of the new place</string>
    <string name="choose">Choose category</string>
    <string name="loading">Loading...</string>
</resources>
