<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:id="@+id/toolbarHome"
        android:backgroundTint="@color/colorPrimary">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_below="@+id/toolbarHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.arindam.androidtask.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="400dp"
                android:orientation="vertical"
                android:paddingTop="25dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:id="@+id/linearLayout">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_store" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/ic_place" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="200dp"
                    android:src="@drawable/ic_category"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:layout_toEndOf="@+id/linearLayout"
                android:layout_alignBottom="@+id/linearLayout"
                tools:ignore="RtlHardcoded"
                android:layout_alignParentTop="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>

                <EditText
                    android:id="@+id/place_name"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/place_name" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/address"/>

                <TextView
                    android:id="@+id/map_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="70dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/street_address"
                    android:lines="3"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ProgressBar
                    android:layout_marginTop="-50dp"
                    android:layout_marginBottom="9dp"
                    android:layout_marginRight="11dp"
                    android:layout_gravity="right"
                    android:id="@+id/mapLoader"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:visibility="invisible"/>

                <ImageButton
                    android:id="@+id/myLocation"
                    android:onClick="fetchLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:padding="19dp"
                    android:layout_marginTop="-60dp"
                    android:layout_marginBottom="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_gps"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                    <fragment
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        class="com.google.android.gms.maps.SupportMapFragment"
                        android:id="@+id/map"
                        android:layout_width="match_parent"
                        android:layout_height="120dp" />

                    <ImageView
                        android:id="@+id/map_overlay"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/map_over"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/category"/>

                <EditText
                    android:id="@+id/choose_category"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/choose_category"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

            </LinearLayout>

            <LinearLayout
                android:padding="15dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linearLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:text="@string/add_phone_hours_website_and_photos"
                    android:textSize="18.5sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/help_google_verify_this_place"
                    android:textSize="16sp" />

                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/google" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>